--- a/nlp/nlp_take2.ipynb
+++ b/nlp/nlp_take2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b324b10c",
+   "id": "b1844838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cd2f5820",
+   "id": "6aefe309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8d85d347",
+   "id": "386a5fae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eb335ac7",
+   "id": "2f8f920c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fdd4dfa4",
+   "id": "c1281b20",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "549fca5a",
+   "id": "594596b7",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16ef078",
+   "id": "4f3a0c24",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2c645639",
+   "id": "ad1b5253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "42f3e5ef",
+   "id": "45fdda3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "134e13b4",
+   "id": "e74749c1",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd7eb30c",
+   "id": "9f6d1465",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dec7992",
+   "id": "f9af5b76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7636f565",
+   "id": "838c5c0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e4a1a587",
+   "id": "6d8f3fbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a0cac0e0",
+   "id": "839b254e",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16257c5a",
+   "id": "08bf4d72",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c4e85dca",
+   "id": "c57a3fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "08c9ba13",
+   "id": "67321498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3adef2bd",
+   "id": "db7ca436",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,251 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33dee6a2",
+   "id": "32288392",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3d3cf40a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## pos tagging :\n",
+    "\n",
+    "corpus2 = \"\"\"Data science is an interdisciplinary field[10] focused on extracting knowledge from typically large data sets\n",
+    "and applying the knowledge and insights from that data to solve problems in a wide range of application domains.\n",
+    "The field encompasses preparing data for analysis, formulating data science problems, analyzing data,\n",
+    "developing data-driven solutions, and presenting findings to inform high-level decisions in a broad range of application domains.\n",
+    "As such, it incorporates skills from computer science, statistics, information science, mathematics, data visualization,\n",
+    "information visualization, data sonification, data integration, graphic design, complex systems, communication and business.\n",
+    "[11][12] Statistician Nathan Yau, drawing on Ben Fry, also links data science to human–computer interaction: \n",
+    "users should be able to intuitively control and explore data.[13][14] In 2015, the American Statistical Association\n",
+    "identified database management, statistics and machine learning,\n",
+    "and distributed and parallel systems as the three emerging foundational professional communities.[15]\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9a179c07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "sentence_2 = nltk.sent_tokenize(corpus2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "62f68ed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Data science is an interdisciplinary field[10] focused on extracting knowledge from typically large data sets\\nand applying the knowledge and insights from that data to solve problems in a wide range of application domains.',\n",
+       " 'The field encompasses preparing data for analysis, formulating data science problems, analyzing data,\\ndeveloping data-driven solutions, and presenting findings to inform high-level decisions in a broad range of application domains.',\n",
+       " 'As such, it incorporates skills from computer science, statistics, information science, mathematics, data visualization,\\ninformation visualization, data sonification, data integration, graphic design, complex systems, communication and business.',\n",
+       " '[11][12] Statistician Nathan Yau, drawing on Ben Fry, also links data science to human–computer interaction: \\nusers should be able to intuitively control and explore data.',\n",
+       " '[13][14] In 2015, the American Statistical Association\\nidentified database management, statistics and machine learning,\\nand distributed and parallel systems as the three emerging foundational professional communities.',\n",
+       " '[15]']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c8f3b05c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2ca4993a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\dell\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('averaged_perceptron_tagger')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0f7146b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Data', 'NNP'), ('science', 'NN'), ('interdisciplinary', 'JJ'), ('field', 'NN'), ('[', 'VBD'), ('10', 'CD'), (']', 'NNS'), ('focused', 'VBD'), ('extracting', 'VBG'), ('knowledge', 'NN'), ('typically', 'RB'), ('large', 'JJ'), ('data', 'NNS'), ('sets', 'NNS'), ('applying', 'VBG'), ('knowledge', 'NN'), ('insights', 'NNS'), ('data', 'NNS'), ('solve', 'VBP'), ('problems', 'NNS'), ('wide', 'JJ'), ('range', 'NN'), ('application', 'NN'), ('domains', 'NNS'), ('.', '.')]\n",
+      "[('The', 'DT'), ('field', 'NN'), ('encompasses', 'VBZ'), ('preparing', 'VBG'), ('data', 'NNS'), ('analysis', 'NN'), (',', ','), ('formulating', 'VBG'), ('data', 'NNS'), ('science', 'NN'), ('problems', 'NNS'), (',', ','), ('analyzing', 'VBG'), ('data', 'NNS'), (',', ','), ('developing', 'VBG'), ('data-driven', 'JJ'), ('solutions', 'NNS'), (',', ','), ('presenting', 'VBG'), ('findings', 'NNS'), ('inform', 'JJ'), ('high-level', 'JJ'), ('decisions', 'NNS'), ('broad', 'JJ'), ('range', 'NN'), ('application', 'NN'), ('domains', 'NNS'), ('.', '.')]\n",
+      "[('As', 'IN'), (',', ','), ('incorporates', 'VBZ'), ('skills', 'NNS'), ('computer', 'NN'), ('science', 'NN'), (',', ','), ('statistics', 'NNS'), (',', ','), ('information', 'NN'), ('science', 'NN'), (',', ','), ('mathematics', 'NNS'), (',', ','), ('data', 'NNS'), ('visualization', 'NN'), (',', ','), ('information', 'NN'), ('visualization', 'NN'), (',', ','), ('data', 'NNS'), ('sonification', 'NN'), (',', ','), ('data', 'NNS'), ('integration', 'NN'), (',', ','), ('graphic', 'JJ'), ('design', 'NN'), (',', ','), ('complex', 'JJ'), ('systems', 'NNS'), (',', ','), ('communication', 'NN'), ('business', 'NN'), ('.', '.')]\n",
+      "[('[', 'RB'), ('11', 'CD'), (']', 'JJ'), ('[', '$'), ('12', 'CD'), (']', 'NNP'), ('Statistician', 'NNP'), ('Nathan', 'NNP'), ('Yau', 'NNP'), (',', ','), ('drawing', 'VBG'), ('Ben', 'NNP'), ('Fry', 'NNP'), (',', ','), ('also', 'RB'), ('links', 'VBZ'), ('data', 'NNS'), ('science', 'NN'), ('human–computer', 'NN'), ('interaction', 'NN'), (':', ':'), ('users', 'NNS'), ('able', 'JJ'), ('intuitively', 'RB'), ('control', 'VBP'), ('explore', 'RB'), ('data', 'NNS'), ('.', '.')]\n",
+      "[('[', 'RB'), ('13', 'CD'), (']', 'JJ'), ('[', '$'), ('14', 'CD'), (']', 'NN'), ('In', 'IN'), ('2015', 'CD'), (',', ','), ('American', 'NNP'), ('Statistical', 'NNP'), ('Association', 'NNP'), ('identified', 'VBD'), ('database', 'NN'), ('management', 'NN'), (',', ','), ('statistics', 'NNS'), ('machine', 'NN'), ('learning', 'NN'), (',', ','), ('distributed', 'VBD'), ('parallel', 'JJ'), ('systems', 'NNS'), ('three', 'CD'), ('emerging', 'VBG'), ('foundational', 'JJ'), ('professional', 'JJ'), ('communities', 'NNS'), ('.', '.')]\n",
+      "[('[', 'RB'), ('15', 'CD'), (']', 'NNS')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## finding the pos tag for each word:\n",
+    "for i in range(len(sentence_2)):\n",
+    "    words = nltk.word_tokenize(sentence_2[i])\n",
+    "    words = [word for word in words if word not in set(stopwords.words('english'))]\n",
+    "    pos_tag = nltk.pos_tag(words)\n",
+    "    print(pos_tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37779e19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6330b694",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "52d3ef83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## NER : named entity recognition\n",
+    "sen_3 = \"\"\"India gate is built by xxxxxxxx in 19xx in a budget of 1 milion dollars and mohit is visiting it on this tuesday\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6c687a7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "words = nltk.word_tokenize(sen_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "53bc9645",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('India', 'NNP'), ('gate', 'NN'), ('is', 'VBZ'), ('built', 'VBN'), ('by', 'IN'), ('xxxxxxxx', 'NN'), ('in', 'IN'), ('19xx', 'CD'), ('in', 'IN'), ('a', 'DT'), ('budget', 'NN'), ('of', 'IN'), ('1', 'CD'), ('milion', 'NN'), ('dollars', 'NNS'), ('and', 'CC'), ('mohit', 'NN'), ('is', 'VBZ'), ('visiting', 'VBG'), ('it', 'PRP'), ('on', 'IN'), ('this', 'DT'), ('tuesday', 'NN')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pos_tag_ele = nltk.pos_tag(words)\n",
+    "print(pos_tag_ele)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d2b8b887",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package maxent_ne_chunker to\n",
+      "[nltk_data]     C:\\Users\\dell\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package maxent_ne_chunker is already up-to-date!\n",
+      "[nltk_data] Downloading package words to\n",
+      "[nltk_data]     C:\\Users\\dell\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\words.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('maxent_ne_chunker')\n",
+    "nltk.download('words')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "48824cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.ne_chunk(pos_tag_ele).draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "179a882b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae9d8f3",
    "metadata": {},
    "outputs": [],
    "source": []
