--- a/nlp/nlp_take2.ipynb
+++ b/nlp/nlp_take2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1844838",
+   "id": "0d465784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6aefe309",
+   "id": "37095e61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "386a5fae",
+   "id": "80d5f693",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2f8f920c",
+   "id": "11ba175d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c1281b20",
+   "id": "ee2b4c98",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "594596b7",
+   "id": "7c597ffa",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f3a0c24",
+   "id": "c3f20ae2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ad1b5253",
+   "id": "e665b6f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "45fdda3e",
+   "id": "fb1b7c6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e74749c1",
+   "id": "d3a7bca8",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f6d1465",
+   "id": "400f32f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9af5b76",
+   "id": "1d0a4367",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "838c5c0d",
+   "id": "714204fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6d8f3fbd",
+   "id": "7e1d354e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "839b254e",
+   "id": "25866442",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08bf4d72",
+   "id": "45452e51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c57a3fb8",
+   "id": "b97df19e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "67321498",
+   "id": "dea1b795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "db7ca436",
+   "id": "a2ae90b7",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32288392",
+   "id": "7abc37ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3d3cf40a",
+   "id": "86f00c37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9a179c07",
+   "id": "feae1bda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "62f68ed6",
+   "id": "a6ac2136",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "c8f3b05c",
+   "id": "186541c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2ca4993a",
+   "id": "640ed4aa",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0f7146b7",
+   "id": "86f0dc9c",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37779e19",
+   "id": "e3cca12a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6330b694",
+   "id": "c8b481c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "52d3ef83",
+   "id": "a7115183",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6c687a7c",
+   "id": "e61b9f33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "53bc9645",
+   "id": "f1b1b6b6",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d2b8b887",
+   "id": "babe49f1",
    "metadata": {},
    "outputs": [
     {
@@ -689,17 +689,17 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "48824cd6",
+   "id": "0df4e049",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nltk.ne_chunk(pos_tag_ele).draw()"
+    "nltk.ne_chunk(pos_tag_ele).draw()  ## NER"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179a882b",
+   "id": "b688ff4a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -707,7 +707,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae9d8f3",
+   "id": "b6cb5e11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "babf87a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f356d40c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d33860d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffb6d270",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26e50abd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e31580df",
    "metadata": {},
    "outputs": [],
    "source": []
